# projecteuler

./: README.md  euler_md_template.md  euler_to_markdown.py  problem001.py  problem002.py  problem003.py  problem004.py  problem005.py  problem006.py  problem007.py  problem008.py  problem009.py  problem010.py  problem011.py  problem012.py  problem013.py  problem014.py  problem015.py  problem016.py  problem017.py  problem018.py  problem019.py  problem020.py  problem021.py  problem022.py  problem023.py  problem024.py  problem025.py  problem026.py  problem031.py  problem067.py  pyproject.toml
eulertools/: __init__.py  euler.py
output/: p001.md
problems/: p001.py
projecteuler/: EulerProblem.py  utils.py
projecteuler/tools/: EulerProblem.py
static/: template.md
